# coyote

./: .gitignore  .gitmodules  LICENSE  NOTICE  Readme.md  compile_coyote.sh  compile_spike_model.sh  install_dependencies_ubuntu.sh  install_sparta.sh  set_up_epi_compiler.sh  setup_epi_compiler_binary.sh  setup_epi_compiler_docker.sh
Coyote/: CMakeLists.txt
Coyote/docs/: Doxyfile  Makefile  adapting.txt  building.txt  development.txt  features.txt  mainpage.txt  running.txt  tracing.txt
Coyote/src/: AccessDirector.cpp  AccessDirector.hpp  AddressMappingPolicy.hpp  Arbiter.cpp  Arbiter.hpp  ArbiterMsg.hpp  CPU.cpp  CPU.hpp  CPUFactories.hpp  CPUFactory.cpp  CPUFactory.hpp  CPUTopology.cpp  CPUTopology.hpp  CacheBank.cpp  CacheBank.hpp  CacheDataMappingPolicy.hpp  CacheRequest.cpp  CacheRequest.hpp  CoreEvent.hpp  Coyote.cpp  Coyote.hpp  Event.hpp  EventVisitor.cpp  EventVisitor.hpp  ExecutionDrivenSimulationOrchestrator.cpp  ExecutionDrivenSimulationOrchestrator.hpp  Fence.hpp  Finish.hpp  FullSystemSimulationEventManager.cpp  FullSystemSimulationEventManager.hpp  InsnLatencyEvent.hpp  L2CacheBank.cpp  L2CacheBank.hpp  L2SharingPolicy.hpp  L3CacheBank.cpp  L3CacheBank.hpp  LogCapable.hpp  Logger.cpp  Logger.hpp  ParentInstId.hpp  (+22 more)
SpartaExample/: CMakeLists.txt  compile.sh
SpartaExample/src/: Ack.hpp  Cache.cpp  Cache.hpp  Core.cpp  Core.hpp  Memory.cpp  Memory.hpp  Req.hpp  SpartaExample.cpp  SpartaExample.hpp  main.cpp
SpikeModel/: CMakeLists.txt  compilation_notes
SpikeModel/docs/: Doxyfile
SpikeModel/src/: AbstractDispatcher.cpp  AbstractDispatcher.hpp  AccessDirector.cpp  AccessDirector.hpp  AddressMappingPolicy.hpp  Arbiter.cpp  Arbiter.hpp  ArbiterMsg.hpp  BIU.hpp  BankCommand.hpp  BaseInstruction.cpp  BaseInstruction.hpp  CPU.cpp  CPU.hpp  CPUFactories.hpp  CPUFactory.cpp  CPUFactory.hpp  CPUTopology.cpp  CPUTopology.hpp  CacheBank.cpp  CacheBank.hpp  CacheDataMappingPolicy.hpp  CacheRequest.cpp  CacheRequest.hpp  CommandSchedulerIF.hpp  Core.cpp  Core.hpp  CoreEvent.hpp  DataMappingPolicy.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  EventVisitor.cpp  EventVisitor.hpp  Execute.cpp  Execute.hpp  ExecutionDrivenSimulationOrchestrator.cpp  ExecutionDrivenSimulationOrchestrator.hpp  Fence.hpp  Fetch.cpp  (+103 more)
SpikeModel/src/MemoryTile/: BankCommand.hpp  Bus.hpp  CommandSchedulerIF.cpp  CommandSchedulerIF.hpp  FifoCommandScheduler.cpp  FifoCommandSchedulerWithPriorities.cpp  FifoCommandSchedulerWithPriorities.hpp  FifoRrMemoryAccessScheduler.cpp  FifoRrMemoryAccessScheduler.hpp  FifoRrMemoryAccessSchedulerAccessTypePriority.cpp  FifoRrMemoryAccessSchedulerAccessTypePriority.hpp  GreedyFifoRrMemoryAccessScheduler.cpp  GreedyFifoRrMemoryAccessScheduler.hpp  MCPUInstruction.hpp  MCPURequest.hpp  MCPUSetVVL.hpp  MemoryAccessSchedulerIF.cpp  MemoryAccessSchedulerIF.hpp  MemoryBank.cpp  MemoryBank.hpp  MemoryCPUWrapper.cpp  MemoryCPUWrapper.hpp  MemoryController.cpp  MemoryController.hpp  OldestRWOverPrechargeCommandScheduler.cpp  OldestRWOverPrechargeCommandScheduler.hpp  OldestReadyCommandScheduler.cpp  OldestReadyCommandScheduler.hpp  RWOverPrechargeCommandScheduler.cpp  RWOverPrechargeCommandScheduler.hpp  VectorElementType.hpp
SpikeModel/src/NoC/: DetailedNoC.cpp  DetailedNoC.hpp  FunctionalNoC.cpp  FunctionalNoC.hpp  NoC.cpp  NoC.hpp  NoCMessage.cpp  NoCMessage.hpp  NoCMessageType.hpp  SimpleNoC.cpp  SimpleNoC.hpp
SpikeModel/src/cache_helpers/: BasicCacheSet.hpp  Cache.hpp  SimpleCache.hpp
apps/: .gitignore  vector_instruction_summarizer.py
apps/SpMV/: compile.sh  spmv_gendata.pl
apps/axpy/: axpy.c  axpy_gendata.py  compile.sh  main.c  utils.c  utils.h
apps/common/: crt.S  syscalls.c
apps/mt-matmul/: compile.sh  dataset.h  matmul  matmul.c  matmul_gendata.pl  mt-matmul.c  my_crt.S  run_all.sh
apps/mt-matmul-vec/: Makefile  compile.sh  matmul  matmul.c
apps/mt-true-matmul/: compile.sh  mt-matmul.c  run_all.sh
apps/somier/: compile.sh  main.c  somier.c  somier.h  somier_gendata.pl  somier_utils.c  somier_utils.h
apps/spmv-vec/: compile.sh  generate_Dataset.py  spmv.c  spmv_gendata.pl  spmv_gendata.py
apps/stream/: Makefile  README.md  compile.sh
apps/test/: compile.sh  gendata.pl  test.c
configs/: 4x4_8tiles_8mcpus_16cores_32threads_detailed.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3VCs.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3networks_4VCs_prios.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3networks_prios.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3pnets_4prioqueues_prios.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3pnets_prios.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3virtnets.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_3virtnets_4prioqueues_prios.yml  4x4_8tiles_8mcpus_16cores_32threads_detailed_7VCs_prios.yml  detailed_network.yml  l2_unit_test.yml  memory_controller_unit_test.yml  phase_1_acme.yml  phase_1_acme_32k.yml  phase_1_epi.yml  phase_1_epi_1024vrf.yml  phase_1_epi_128mshrs.yml  phase_1_epi_16mshrs.yml  phase_1_epi_16mshrs_vl256.yml  phase_1_epi_256vrf_8lanes.yml  simple_arch.yml  simple_network.yml  test_architecture.yml
configs/booksim/: 4x4_mesh_iq.cfg  4x4_mesh_iq_1vc_prios.cfg  4x4_mesh_iq_3vcs.cfg  4x4_mesh_iq_4vcs_prios.cfg  4x4_mesh_iq_7vcs_prios.cfg  4x8_mesh_iq_1c_1vc_1iq.cfg
docker_files/: Dockerfile  docker-build.sh  docker-run.sh  user-mapping.sh
paraver_cfgs/: L2_miss_addresses.cfg  bandwidth_use.cfg  following_an_instruction_through_memory.cfg  instructions.cfg  memory_address.cfg  memory_and_misses.cfg  memory_objs_causing_stalls.cfg  memory_requests.cfg  noc_destination.cfg  stalls_served_per_cache_bank.cfg
simulation_scripts/: parameter_sweep.py
trace2gnuplot/: trace2gnuplot.json  trace2gnuplot.py
trace2prv/: README.txt  how_to_add_new_events  m_trace.py  trace2prv
trace2prv/cfg/: 3dp_destinationRegister_instruction.cfg  PC.cfg  instructions.cfg  memory_address.cfg  memory_instructions.cfg  registers.cfg  sanity.cfg  scalar_info.cfg  specific_register_use_distance.cfg  vector_lengths.cfg
trace2prv/lib/: DisasmRV.py  ParaverEvent.py  asm2prv.py  (+8 more)
(+51 files in other folders)
